configs/elmira/rules.v4
# Generated by iptables-save v1.4.14 on Wed Apr 15 15:12:43 2015
*nat
:PREROUTING ACCEPT [258:31756]
:INPUT ACCEPT [97:20607]
:OUTPUT ACCEPT [1040:70908]
:POSTROUTING ACCEPT [1040:70908]
COMMIT
# Completed on Wed Apr 15 15:12:43 2015
# Generated by iptables-save v1.4.14 on Wed Apr 15 15:12:43 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i icvpn -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 10000 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 10000 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 655 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 655 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i icvpn -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i icvpn -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i br-fftr -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i br-fftr -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i icvpn -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -i icvpn -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i br-fftr -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -i br-fftr -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i br-fftr -j ACCEPT
-A INPUT -i br-fftr -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A INPUT -i icvpn -p tcp -m tcp --dport 179 -j ACCEPT
-A INPUT -i icvpn -p udp -m udp --dport 179 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i br-fftr -o tun0 -j ACCEPT
-A FORWARD -i tun0 -o br-fftr -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i br-fftr -o icvpn -j ACCEPT
-A FORWARD -i icvpn -o br-fftr -j ACCEPT
-A FORWARD -i tun0 -o br-fftr -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A FORWARD -i br-fftr -o tun0 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A FORWARD -i tun0 -o br-fftr -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -i br-fftr -o tun0 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -i tun0 -o br-fftr -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i br-fftr -o tun0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i tun0 -o br-fftr -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A FORWARD -i br-fftr -o tun0 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -j ACCEPT
-A OUTPUT -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o icvpn -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A OUTPUT -o br-fftr -j ACCEPT
-A OUTPUT -o icvpn -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o icvpn -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o br-fftr -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -j ACCEPT
-A OUTPUT -o eth0 -p udp -j ACCEPT
-A OUTPUT -o icvpn -p tcp -m tcp --dport 179 -j ACCEPT
-A OUTPUT -o icvpn -p udp -m udp --dport 179 -j ACCEPT
COMMIT
# Completed on Wed Apr 15 15:12:43 2015
